--- a/Blueberry_Pockets/index.html
+++ b/Blueberry_Pockets/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">FU-POCKETS</a>
+      <a id="logo-container" href="#" class="brand-logo">MEthereum-POCKETS</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
@@ -29,7 +29,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center teal-text text-lighten-2">FinancialU</h1>
+        <h1 class="header center teal-text text-lighten-2">MEthereum</h1>
         <div class="row center">
           <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
         </div>
