--- a/MEthereum_Web_prototype/visa.html
+++ b/MEthereum_Web_prototype/visa.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Financial U</a>
+      <a id="logo-container" href="#" class="brand-logo">MEthereum</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="studentProfile.html">Student Profile</a></li>
       </ul>
