--- a/MEthereum_Web_prototype/index.html
+++ b/MEthereum_Web_prototype/index.html
@@ -147,7 +147,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Bluberry Pockets</a>
       </div>
     </div>
   </footer>
